# speculate

./: .gitignore  README.md  pyproject.toml
speculate/: __init__.py  cli.py  graph_engine.py  mermaid_generator.py
tests/: __init__.py  test_cli.py
